--- a/app/src/main/res/layout/fragment_studentlist.xml
+++ b/app/src/main/res/layout/fragment_studentlist.xml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     tools:context=".Studentlist">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/nValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="20sp"
+        android:layout_marginStart="15dp"/>
+
+    <TextView
+        android:id="@+id/aValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Age"
+        android:textSize="20sp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="15dp"
+        />
+
+    <TextView
+        android:id="@+id/hValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Height"
+        android:textSize="20sp"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="15dp"
+        />
+
+    <TextView
+        android:id="@+id/mValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Marital Status"
+        android:textSize="20sp"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="15dp"
+        />
 
 </FrameLayout>
